--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,5 +15,5 @@ jobs:
       environment: dev
       aws-region: "us-east-1"
       aws-state-s3-bucket: "bucket-pipe-github"
-      aws-lock-table: "table-pipe-github"
+      aws-lock-table: "table-pipe-webserver"
       aws-assume-role-arn: "arn:aws:iam::354918407212:role/role-autenticador-pipe-github"
