Tentando retirar lock no validate

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -57,12 +57,9 @@ jobs:
             -backend-config="region=${{ inputs.aws-region }}" \
             -backend-config="dynamodb_table=${{ inputs.aws-lock-table }}"
 
-      - name: limpar-locks
-         run: terraform force-unlock 3d118b4e-4ec0-e586-089f-fc1a541ba028
-
       - name: Terraform Validate        
         id: terraform-validate
-        run: terraform validate
+        run: terraform force-unlock 3d118b4e-4ec0-e586-089f-fc1a541ba028 && terraform validate
 
       - name: Terraform Destroy
         if: steps.read-destroy.outputs.destroy == 'true'
